--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <% if !user_signed_in? %>
+    <li><%= link_to "Login", new_user_session_path, method: :get %></li>
+  <% else %>
+    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+  <% end %>
+
   <body>
     <%= yield %>
   </body>
