--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,22 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <% if !user_signed_in? %>
-    <li><%= link_to "Login", new_user_session_path, method: :get %></li>
-  <% else %>
-    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-  <% end %>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/projects">Home</a>
+    <% if !user_signed_in? %>
+      <li><%= link_to "Login", new_user_session_path, method: :get %></li>
+    <% else %>
+      <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+    <% end %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    </div>
+  </div>
+</nav>
+
 
   <body>
     <%= yield %>
