--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Projects</h1>
-<p>Check out my projects!</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">My Projects</h1>
+    <hr class="my-4">
+    <p class="lead">I am a software developer and I'm also working on my BS in Computer
+    Science.<br>I love doing data analysis as well as machine learning. Please browse my projects
+    to<br>see where I have experience and what projects I'm challenging myself with!</p>
+  </div>
+</div>
 
-<table class="table">
+<!--
+<h1>My Projects</h1>
+<p>I work in software development and I'm also working on my BS in Computer
+Science.<br>I love doing data analysis as well as machine learning. Please browse my projects
+to<br>see where I have experience and what projects I'm challenging myself with!</p>
+-->
+
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
       <th>Title</th>
