--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,14 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @project.title %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">
+    <strong>Title: </strong><%= @project.title %>
+    </h5>
+    <hr class="my-2">
+    <p class="card-text">
+    <strong>Description: </strong><%= @project.description %>
+    </p>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
+    <% if user_signed_in? %>
+      <%= link_to 'Edit', edit_project_path(@project), :class => "btn btn-secondary" %>
+      <%= link_to 'Destroy', @project, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
+    <% end %>
+
+  </div>
+</div>
+
 <%= link_to 'Back', projects_path %>
