--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<!-- adding note so I can push/merge again -->
 
 <div class="card" style="width: 18rem;">
   <div class="card-body">
